# deb-changelog

./: Cargo.toml  README.md
examples/: parse_changelog.rs
src/: entry.rs  iter.rs  lib.rs
